# arctic-calendar

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/arctic_calendar/: __main__.py  appointments.py  cli.py  models.py  notes.py
tests/arctic_calendar/: test_appointments.py  test_notes.py
